--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -76,7 +76,9 @@
   },
   "PartialScan": {
     "ResourceTrackerValidforDays": 3,
-    "StoreResourceTrackerLocally": "True"
+    "StoreResourceTrackerLocally": "True",
+    "LocalScanUpdateFrequency": "100",
+    "DurableScanUpdateFrequency": "200"
   },
   "DockerImage":{
     "ImageName" : "azskado/adosecurityscan"
