Changes for making attestation expiry duration to 180 days for owner + baseline controls

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -556,6 +556,7 @@
   "PublicIpAddress": {
     "EnablePublicIpResource": false
    },
+  "OwnerControlsCustomExpiryPeriod" : 180,
   "SeverityForSecContactAlerts": ["Medium","Low"],
   "MaxResourceInventoryObjectsCount": 20000,
   "AlernateAccountRegularExpressionForOrg": "",
