--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -165,6 +165,16 @@
       "ResourceDetailsKeys": {
         "WorkspaceId": "Reporting workspace customer id",
         "WorkspaceResourceId": "Reporting workspace azure id"
+      },
+      "ASCAssessmentsForIrrelevantRecommendation" :  {
+        "EndpointProtectionAssessmentKey" : {
+          "AssessmentName" : "83f577bd-a1b6-b7e1-0891-12ca19d1e6df",
+          "AllowedCauses" : ["SecurityApplianceNonRelevantRecommendation", "SecurityApplianceIrrelevantRecommendation"]
+        },
+        "VulnerabilitySolutionAssessmentKey":{
+          "AssessmentName" : "ffff0522-1e88-47fc-8382-2a80ba848f5d",
+          "AllowedCauses" : ["SecurityApplianceNonRelevantRecommendation","SecurityApplianceIrrelevantRecommendation"]
+        }
       }
     },
     "ControlExclusionsByService" : 
