Added tag ExtendedExpiry to 10 controls and added logic to calculate 180 days expiry for them

--- a/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
+++ b/src/AzSK/Framework/Configurations/SVT/Services/AppService.json
@@ -64,7 +64,8 @@
           "AppService",
           "FunctionApp",
           "Windows",
-          "Linux"
+          "Linux",
+          "ExtendedExpiry"
         ],
         "Enabled": true
       },
