--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -556,6 +556,7 @@
   "PublicIpAddress": {
     "EnablePublicIpResource": false
    },
+   "PrivilegedRolesForSub" : ["Owner" , "Contributor" , "User Access Administrator"],
   "SeverityForSecContactAlerts": ["Medium","Low"],
   "MaxResourceInventoryObjectsCount": 20000,
   "AlernateAccountRegularExpressionForOrg": "",
