--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -39,7 +39,7 @@
           "ADO_ServiceConnection_AuthZ_Dont_Grant_All_Pipelines_Access",
           "ADO_ServiceConnection_AuthZ_Dont_Allow_Global_Groups",
           "ADO_ServiceConnection_SI_Review_Inactive_Connection",
-          "ADO_ServiceConnection_SI_Dont_Allow_Project_Sharing",
+          "ADO_ServiceConnection_SI_Dont_Share_Across_Projects",
           "ADO_ServiceConnection_AuthZ_Dont_Grant_Subscription_Access"
         ]
       },
@@ -67,6 +67,14 @@
           "ADO_AgentPool_AuthZ_Project_Dont_Grant_All_Pipeline_Access",
           "ADO_AgentPool_AuthZ_Dont_Enable_Auto_Provisioning",
           "ADO_AgentPool_SI_Review_Inactive_Pool"
+        ]
+      },
+      {
+        "ResourceType": "VariableGroup",
+        "ControlIds": [
+          "ADO_VariableGroup_AuthZ_Dont_Grant_All_Pipelines_Access",
+          "ADO_VariableGroup_AuthZ_Disable_Inherited_Permissions",
+          "ADO_VariableGroup_DP_No_PlainText_Secrets_In_Variables"
         ]
       }
     ]
