--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -49,7 +49,8 @@
           "ADO_Build_AuthZ_Disable_Inherited_Permissions",
           "ADO_Build_DP_No_PlainText_Secrets_In_Definition",
           "ADO_Build_SI_Review_URL_Variables_Settable_At_Queue_Time",
-          "ADO_Build_SI_Disable_Task_Group_Edit_Permission"
+          "ADO_Build_SI_Disable_Task_Group_Edit_Permission",
+          "ADO_Build_SI_Disable_Variable_Group_Edit_Permission"
         ]
       },
       {
@@ -59,7 +60,8 @@
           "ADO_Release_SI_Review_External_Sources",
           "ADO_Release_DP_No_PlainText_Secrets_In_Definition",
           "ADO_Release_SI_Review_URL_Variables_Settable_At_Release_Time",
-          "ADO_Release_SI_Disable_Task_Group_Edit_Permission"
+          "ADO_Release_SI_Disable_Task_Group_Edit_Permission",
+          "ADO_Release_SI_Disable_Variable_Group_Edit_Permission"
         ]
       },
       {
