VG reco update, enable attestation for VG, rmv msg

--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -101,7 +101,8 @@
     "Build",
     "Release",
     "ServiceConnection",
-    "AgentPool"
+    "AgentPool",
+    "VariableGroup"
   ],
   "AttestationExpiryPeriodInDays": {
     "Default": 90,
