policy project and enable sttestation changes

--- a/src/AzSK.ADO/Framework/Configurations/AzSKSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/AzSKSettings.json
@@ -6,5 +6,7 @@
     "LocalControlTelemetryKey":  "00000000-0000-0000-0000-000000000000",
     "LocalEnableControlTelemetry":  false,
     "AutoUpdateCommand": "Install-Module AzSK.ADO -AllowClobber -Scope CurrentUser -Force",
-    "BranchId": "master"
+    "BranchId": "master",
+    "EnableOrgControlAttestation": false,
+    "PolicyProject":""
 }
