--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -17,7 +17,7 @@
           "ADO_Organization_AuthZ_Limit_Pipeline_Access_To_Referenced_Repos",
           "ADO_Organization_DP_Dont_Allow_Public_Projects",
           "ADO_Organization_BCDR_Min_Admin_Count",
-          "ADO_Organization_AuthN_Use_ALT_Accounts_For_Admin"          
+          "ADO_Organization_AuthN_Use_ALT_Accounts_For_Admin"              
         ]
       },
       {
@@ -128,6 +128,8 @@
       ]
     }
   ],
+  "AttestationRepo":"",
+  "AttestationBranch":"",
   "IsAllowLongRunningScan": true,
   "LongRunningScanCheckPoint": 1000,
   "DefaultValidAttestationStates": [
