disable admin ctrl scan, print identity msg, add prj filter in bug loging

--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -99,6 +99,20 @@
   "DockerImage":{
     "ImageName" : "azskado/adosecurityscan"
   },
+  "AllowAdminControlScanForGroups": [
+    {
+      "ResourceType": "Organization",
+      "GroupNames": [
+        "Project Collection Administrators"
+      ]
+    },
+    {
+      "ResourceType": "Project",
+      "GroupNames": [
+        "Project Administrators"
+      ]
+    }
+  ],
   "AllowAttestationResourceType": [
     "Organization",
     "Project",
