added hollow entry for ADOApIInfo

--- a/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK.ADO/Framework/Configurations/SVT/ControlSettings.json
@@ -99,6 +99,11 @@
   "DockerImage":{
     "ImageName" : "azskado/adosecurityscan"
   },
+  "ADOInfoAPI":{
+    "Enabled" : false,
+    "Endpoint" : "",
+    "Code" : ""
+  },
   "AllowAdminControlScanForGroups": [
     {
       "ResourceType": "Organization",
