Changes for reading msg from control settings

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -490,10 +490,9 @@
     "SupportedSources": []
   },
   "ControlsToExcludeFromScan": {
-    "TenantIds": [
-    ],
-    "ControlIds" : [
-		]
+    "TenantIds": [],
+    "ControlIds" : [],
+    "ExclusionWarningMessage" : ""
   },
   "CloudService": {
     "LatestOSSKUIDs": [ "WA-GUEST-OS-4.44_201707-01" ]
