Added property to control settings

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -492,7 +492,8 @@
   "ControlsToExcludeFromScan": {
     "TenantIds": [],
     "ControlIds" : [],
-    "ExclusionWarningMessage" : ""
+    "ExclusionWarningMessage" : "",
+    "ExclusionHelpLink": ""
   },
   "CloudService": {
     "LatestOSSKUIDs": [ "WA-GUEST-OS-4.44_201707-01" ]
