Block attestation for migrated controls

--- a/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
+++ b/src/AzSK/Framework/Configurations/SVT/ControlSettings.json
@@ -493,7 +493,8 @@
     "TenantIds": [],
     "ControlIds" : [],
     "ExclusionWarningMessage" : "",
-    "ExclusionHelpLink": ""
+    "ExclusionHelpLink": "",
+    "BlockedAttestationWarningMessage": ""
   },
   "CloudService": {
     "LatestOSSKUIDs": [ "WA-GUEST-OS-4.44_201707-01" ]
